<resources>
    <string name="app_name">finanzas</string>
    <string name="Add_income">Agregar ingreso</string>
    <string name="Name">Nombre</string>
    <string name="Amount">Monto</string>
    <string name="Monthly">Mensual</string>
    <string name="Fixed_value">Valor Fijo</string>
    <string name="Tags">Etiquetas</string>
    <string name="Date">Fecha</string>
    <string name="Send">Enviar</string>
    <string name="enter_a_number">Ingrese un numero</string>
    <string name="Insert_a_name">Ingrese un nombre</string>
    <string name="Income">Ingreso</string>
    <string name="Cost">Egreso</string>
    <string name="Add_a_tag">Agregar un Tag</string>
    <string name="Add_a_cost">Agregar un costo</string>
    <string name="Calculate_balance">Calcular Balance</string>
    <string name="Balance">Balance</string>
    <string name="Costs_">Costos:</string>
    <string name="Ingresos_">Ingresos:</string>
    <string name="Balance_">Balance:</string>
    <string name="Balance_for_tag">Balance por tag</string>
    <string name="Edit">Editar</string>
    <string name="Delete">Borrar</string>
    <string name="list_tags">lista de etiquetas</string>
    <string name="add_a_tag">Agregar una etiqueta</string>
    <string name="monthly_balance">Balance Mensual</string>
    <string name="historical_balance">Balance Historico</string>
    <string name="customised_balance">Balance Personalizado</string>
    <string name="start_date">fecha de incio</string>
    <string name="end_date">fecha de fin</string>
</resources>