<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".SelectDateActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/TV_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monthly_balance"
            android:textAllCaps="true"
            android:textSize="30sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/TV_historical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/historical_balance"
            android:textAllCaps="true"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="16dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_customised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/customised_balance"
                android:textAllCaps="true"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/TV_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start_date"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:visibility="gone"/>

            <DatePicker
                android:id="@+id/DP_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:background="@color/white"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/TV_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/end_date"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:visibility="gone"/>

            <DatePicker
                android:id="@+id/DP_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:background="@color/white"
                android:visibility="gone"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/TV_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Send"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:visibility="gone"/>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>