<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/Add_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Add_cost"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add_income"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Add_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/Add_income"
        app:layout_constraintBottom_toTopOf="@+id/Tags">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add_a_cost"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/Add_cost"
        app:layout_constraintBottom_toTopOf="@+id/Balance">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tags"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/Tags"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Balance"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_help_24"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>